Bug 75982 - PIVOTTABLE New layout dialog does not allow keyboard acceleration for field assignment
Summary: PIVOTTABLE New layout dialog does not allow keyboard acceleration for field a...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-10 15:32 UTC by Kohei Yoshida
Modified: 2014-03-12 17:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-03-10 15:32:59 UTC
This is due to the recent conversion to the widget layout dialog.  The old dialog allowed user to quickly assign fields to page/row/column/data via Ctrl-P/R/C/D while the focus was on the field button on the right hand side of the layout area.  After the conversion these keyboard shortcuts are not functional.
Comment 1 Kohei Yoshida 2014-03-10 15:33:13 UTC
Confirming.
Comment 2 Kohei Yoshida 2014-03-10 15:33:37 UTC
Adding bubli and caolan on CC.
Comment 3 Kohei Yoshida 2014-03-10 15:34:47 UTC
BTW, I'm not sure whether these shortcuts are supposed to be locale-dependent or hard-coded.  That's something we need to check.
Comment 4 Caolán McNamara 2014-03-12 13:28:05 UTC
Given the weird and wonderful ScDPFieldControlBase::StateChanged thing it might be the case that we have to set those widgets hidden, wait until Init is called on them, and then allow them to be shown
Comment 5 Commit Notification 2014-03-12 14:17:34 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e5cb1989520baf321961dbb82437d1b00a2a499c

Resolves: fdo#75982 set mnemonics targets for hidden labels



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2014-03-12 14:20:13 UTC
I dunno what I ever bother adding my first guess into issuezilla, it's never really right. Anyway, all good again.
Comment 7 Kohei Yoshida 2014-03-12 15:01:15 UTC
(In reply to comment #0)
> This is due to the recent conversion to the widget layout dialog.  The old
> dialog allowed user to quickly assign fields to page/row/column/data via
> Ctrl-P/R/C/D while the focus was on the field button on the right hand side
> of the layout area.  After the conversion these keyboard shortcuts are not
> functional.

Oops there is an error in my description.  It was just hitting P/R/C/D without any modifiers.

Thanks for the quick fix.  Will test soon.
Comment 8 Kohei Yoshida 2014-03-12 17:34:30 UTC
Yup, works, with a minor issue of Row field having the 'w' as its hot key instead of 'R' and the column field having the 'F' not 'C'.  I think at least for the English language locale it's better to use R C D P as the hot keys.  But I guess it's just a matter of manually assigning the hot keys in .ui files?
Comment 9 Kohei Yoshida 2014-03-12 17:41:56 UTC
Yup, that's all it takes.  I'll fix that one.
Comment 10 Commit Notification 2014-03-12 17:50:54 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=07b7f86885c543a5fa2234fa2751220b232cf1d3

fdo#75982: Better hot keys for pivot table fields.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.