Resolves: fdo#75982 set mnemonics targets for hidden labels

the key piece though is that labels that have mnemonic targets
are always candidates for getting mnemonics generated for them

Change-Id: Ie4bcbc18e94467936f40875c749cd22793021d0c